Develop (#21)
* rev

* fixed swagger

* Update docker-image.yml

* add sql test

* resove conflit

* added login func

* fixed error

* change secret moethod

* add change

* add jwt

* revised env

* ok (#13)

* Develop (#12)

* rev

* fixed swagger

* Update docker-image.yml

* add sql test

* resove conflit

* added login func

* fixed error

* change secret moethod

* add change

* add jwt

* revised env


* Update main.go


* change name

* modulize model layer, revised auth, added homepage

* remove code

* added infra image

* rev

* add endpoint

* add album

* add kind
