# docs/swagger.json
@@ -7,6 +7,22 @@
         "version": "1.0"
     },
     "paths": {
+        "/allkind": {
+            "get": {
+                "description": "allkind load",
+                "tags": [
+                    "Kind"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "500": {
+                        "description": "error"
+                    }
+                }
+            }
+        },
         "/api/getAccountFromJWT": {
             "get": {
                 "security": [
